<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <!-- Top bar: back button + header plate -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_back"
            android:src="@drawable/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/headerPlate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="@id/btnBack">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/header_plate" />

            <henyard.dodgerush.dewpond.widget.OutlineTextView
                style="@style/Text.Henyard.Outlined.ShopHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/leaderboard"
                android:textSize="18sp"
                app:outlineWidth="3dp" />
        </FrameLayout>

        <!-- Period toggle: This Week / All Time -->
        <FrameLayout
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/profile_board"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerPlate">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="7dp">

                <TextView
                    android:id="@+id/tabWeek"
                    style="@style/Text.Henyard.LbTab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lb_this_week" />

                <TextView
                    android:id="@+id/tabAllTime"
                    style="@style/Text.Henyard.LbTab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/lb_all_time" />
            </LinearLayout>
        </FrameLayout>

        <!-- Ranked list board -->
        <FrameLayout
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/profile_board"
            android:padding="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggle">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lbList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="none"
                tools:listitem="@layout/item_leaderboard" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
